--- a/public/action-template.template
+++ b/public/action-template.template
@@ -1,5 +1,8 @@
 <div id="__delshift-banner">
-    <h4>You are in editing mode. <a id="__delshift-live-anchor" target="_blank"><i class="fas fa-bolt"></i> Live Page</a> &nbsp; <a id="__delshift-close-anchor" title="Close banner"><i class="fas fa-times"></i></a></h4>
+    <h4>
+    <a id="__delshift-home-link"><i class="fas fa-home"></i></a> &nbsp;
+    <span>You are in editing mode.</span>
+    <a id="__delshift-live-anchor" target="_blank"><i class="fas fa-bolt"></i> Live Page</a> &nbsp; &nbsp; <a id="__delshift-close-anchor" title="Close banner"><i class="fas fa-times"></i></a></h4>
 </div>
 <div id="__delshift-loader">
 </div>
@@ -11,17 +14,30 @@
 <div id="__delshift-modal" class="__del-hide">
 </div>
 <template id="__delshift-image-change" class="__del-hide">
-    <h4>Please select an image file to use.<h4>
-    <form name="image-form">
-        <!--<input type="file" name="image-select"/> -->
-        <input type="text" name="image-path" placeholder="Paste the image URL";/>
-        <input type="file" name="target-select">
-        <input type="submit">Submit</button>
-    </form>
+    <h4 ref="heading">Please select an image in your project file system.</h4>
+    <ul ref="galleryImages"></ul>
 </template>
 <div id="__delshift-modal-content" class="__del-modal __del-hide">    
 </div>
 <style>
+    #__delshift-home-link{
+        color: #48488;
+        transition: 0.2s;
+    }
+    #__delshift-home-link:hover{
+        color: #f90;
+    }
+    .__delshift-gallery-item{
+        height: auto;
+        width: 100px;
+        display: inline-block;
+        list-style: none;
+        margin: 10px;
+        cursor: pointer;
+    }
+    .__delshift-gallery-item:hover{
+        box-shadow: 0 0 5px #484848;
+    }
     #__delshift-modal{
         position: fixed;
         z-index: 9999;
@@ -43,6 +59,12 @@
         border-radius: 10px;
         overflow: auto;
         box-shadow: 0 0 15px #484848;
+        padding: 10px;
+        font-family: 'Mansalva', cursive, Segoe UI,SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    }
+    .__del-modal h4{
+        font-weight: 300;
+        font-family: 'Mansalva', cursive, Segoe UI,SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
     }
         #__delshift-close-anchor{
             float: right;
